tests/snapshots/pipeline__handoff_deterministic_pi.snap
---
source: tests/pipeline.rs
expression: stable(&markdown)
---
---
schema: sctxx.handoff/v1
sctxx: <version>
source: <normalized>
mode: standard
llm: none
prompts: {fold_system: 1, fold_user: 1, premap: 1, final_pass: 1, repair: 1, handoff_preamble: 1}
verification: {repo: none, head: none, commits_since_session: 0, stale: 0, contradicted: 0}
tokens: <normalized>
---

# Handoff: lat.md section export

> A different coding agent worked on this task in an earlier session. What follows is a
> compressed, provenance-linked record of that session, produced by `sctxx`. Use it to build on
> the work already done instead of repeating it — but treat it as a map, not as ground truth.
> Run the verify-first commands before you change anything, treat "Hard constraints" as binding
> user instructions, and expand any `[evt a–b]` pointer you need with `sctxx expand`.

## L0 · Brief

**Goal** (from the first user message, not model-inferred): Export durable items to lat.md sections. Do not touch the parser. [evt 0]

**Last user request**: the second section is being swallowed, look at the delimiter [evt 6]

**Next actions** (derived from the ledgers, not model-inferred)
1. re-run `pnpm test sections` — its last run FAILED [evt 5]
2. resolve `9b9d7fe86850` (×1) — AssertionError: expected 2 sections, got 1 [evt 5–5]

**Verify first**
- `git status`
- `git log --oneline -5`
- `pnpm test sections`


## L1 · Items

### Files touched

| path | ops | last evt | status |
|---|---|---|---|
| `src/sections.ts` | edit×1 read×1 | 9 | exists |

### Last known command status
- `pnpm test sections` → **FAILED** (exit 1) [evt 5]

### Unresolved errors
- `9b9d7fe86850` ×1 — AssertionError: expected 2 sections, got 1 [evt 5–5]

## L2 · Recent activity (masked, evt 0–10)

```text
[user] Export durable items to lat.md sections. Do not touch the parser.  (evt 0)
[assistant] I'll add an exporter next to the writer.  (evt 2)
[call read #t1] path=src/sections.ts  (evt 3)
[result #t1] [export function writeSection() {}]  (evt 4)
[shell exit=1] pnpm test sections → 1 failed
AssertionError: expected 2 sections, got 1  (evt 5)
[user] the second section is being swallowed, look at the delimiter  (evt 6)
[model] claude-sonnet-4-5  (evt 7)
[assistant] The delimiter regex was greedy. Fixed.  (evt 8)
[call edit #t2] src/sections.ts  (evt 9)
[result #t2] [ok]  (evt 10)
```

## L3 · Retrieval

Source: Pi session `pi-9a8b7c6d`
<path>/basic.jsonl`

Expand any pointer:
```sh
sctxx expand pi:pi-9a8b7c6d <a>..<b> --context 3
```

Full state including superseded and dropped items: `state.json`. All deterministic ledgers: `ledgers.json`. Run details: `report.json`.

Session source hash: `2362468`

_1 adapter diagnostic(s) recorded; see `report.json`._
